updated hfea buying

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,50 +1,50 @@
 steps:
-#   #Step 1: Deploy the monthly_buy_hfeaFunction
-#   - name: 'gcr.io/cloud-builders/gcloud'
-#     args:
-#     - functions
-#     - deploy
-#     - monthly_buy_hfea  # The name of the Cloud Function for monthly buys
-#     - --source=.
-#     - --trigger-http
-#     - --region=europe-west3
-#     - --runtime=python310
-#     - --timeout=540s
-#     - --entry-point=monthly_buy_hfea  # Entry point function in your Python code
-#     - --memory=256MB
-#     - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
+  #Step 1: Deploy the monthly_buy_hfeaFunction
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - functions
+    - deploy
+    - monthly_buy_hfea  # The name of the Cloud Function for monthly buys
+    - --source=.
+    - --trigger-http
+    - --region=europe-west3
+    - --runtime=python310
+    - --timeout=540s
+    - --entry-point=monthly_buy_hfea  # Entry point function in your Python code
+    - --memory=256MB
+    - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
 
-#   #Step 2: Deploy the rebalance_hfeaFunction
-#   - name: 'gcr.io/cloud-builders/gcloud'
-#     args:
-#     - functions
-#     - deploy
-#     - rebalance_hfea  # The name of the Cloud Function for rebalancing
-#     - --source=.
-#     - --trigger-http
-#     - --region=europe-west3
-#     - --runtime=python310
-#     - --timeout=540s
-#     - --entry-point=rebalance_hfea  # Entry point function in your Python code
-#     - --memory=256MB
-#     - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
+  #Step 2: Deploy the rebalance_hfeaFunction
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - functions
+    - deploy
+    - rebalance_hfea  # The name of the Cloud Function for rebalancing
+    - --source=.
+    - --trigger-http
+    - --region=europe-west3
+    - --runtime=python310
+    - --timeout=540s
+    - --entry-point=rebalance_hfea  # Entry point function in your Python code
+    - --memory=256MB
+    - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
 
-#   # Step 3: Deploy the monthly_buy_spxl
-#   - name: 'gcr.io/cloud-builders/gcloud'
-#     args:
-#     - functions
-#     - deploy
-#     - monthly_buy_spxl  # The name of the Cloud Function for rebalancing
-#     - --source=.
-#     - --trigger-http
-#     - --region=europe-west3
-#     - --runtime=python310
-#     - --timeout=540s
-#     - --entry-point=monthly_buy_spxl  # Entry point function in your Python code
-#     - --memory=256MB
-#     - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
+  # Step 3: Deploy the monthly_buy_spxl
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - functions
+    - deploy
+    - monthly_buy_spxl  # The name of the Cloud Function for rebalancing
+    - --source=.
+    - --trigger-http
+    - --region=europe-west3
+    - --runtime=python310
+    - --timeout=540s
+    - --entry-point=monthly_buy_spxl  # Entry point function in your Python code
+    - --memory=256MB
+    - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
   # Step 4: Deploy the buy_spxl_above_200sma
   - name: 'gcr.io/cloud-builders/gcloud'
@@ -62,122 +62,122 @@ steps:
     - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
 
-#   # Step 5: Deploy the sell_spxl_below_200sma
-#   - name: 'gcr.io/cloud-builders/gcloud'
-#     args:
-#     - functions
-#     - deploy
-#     - sell_spxl_below_200sma  # The name of the Cloud Function for rebalancing
-#     - --source=.
-#     - --trigger-http
-#     - --region=europe-west3
-#     - --runtime=python310
-#     - --timeout=540s
-#     - --entry-point=sell_spxl_below_200sma  # Entry point function in your Python code
-#     - --memory=256MB
-#     - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
+  # Step 5: Deploy the sell_spxl_below_200sma
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - functions
+    - deploy
+    - sell_spxl_below_200sma  # The name of the Cloud Function for rebalancing
+    - --source=.
+    - --trigger-http
+    - --region=europe-west3
+    - --runtime=python310
+    - --timeout=540s
+    - --entry-point=sell_spxl_below_200sma  # Entry point function in your Python code
+    - --memory=256MB
+    - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
-  # # Step 6: Deploy the unified index_alert Cloud Function with Alpaca and Telegram settings
-  # - name: 'gcr.io/cloud-builders/gcloud'
-  #   args:
-  #   - functions
-  #   - deploy
-  #   - index_alert  # Single Cloud Function for all indices
-  #   - --source=.
-  #   - --trigger-http
-  #   - --region=europe-west3
-  #   - --runtime=python310
-  #   - --timeout=540s
-  #   - --entry-point=index_alert  # Python function entry point
-  #   - --memory=256MB
-  #   - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
+  # Step 6: Deploy the unified index_alert Cloud Function with Alpaca and Telegram settings
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - functions
+    - deploy
+    - index_alert  # Single Cloud Function for all indices
+    - --source=.
+    - --trigger-http
+    - --region=europe-west3
+    - --runtime=python310
+    - --timeout=540s
+    - --entry-point=index_alert  # Python function entry point
+    - --memory=256MB
+    - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
 
-# # Create Cloud Scheduler job for 'monthly_buy_hfea' function
-#   - name: 'gcr.io/cloud-builders/gcloud'
-#     args: [
-#       'scheduler', 'jobs', 'update', 'http', 'monthly_buy_hfea',
-#       '--schedule', '0 19 3 * *',  
-#       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/monthly_buy_hfea',
-#       '--http-method', 'POST',
-#       '--time-zone', 'UTC',
-#       '--location', 'europe-west3',
-#       '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
-#     ]
+# Create Cloud Scheduler job for 'monthly_buy_hfea' function
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: [
+      'scheduler', 'jobs', 'update', 'http', 'monthly_buy_hfea',
+      '--schedule', '0 19 3 * *',  
+      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/monthly_buy_hfea',
+      '--http-method', 'POST',
+      '--time-zone', 'UTC',
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
+    ]
 
-#   # Create Cloud Scheduler job for 'rebalance_hfea' function
-#   - name: 'gcr.io/cloud-builders/gcloud'
-#     args: [
-#       'scheduler', 'jobs', 'update', 'http', 'rebalance_hfea',
-#       '--schedule', '0 19 3 1,4,7,10 *',  
-#       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/rebalance_hfea',
-#       '--http-method', 'POST',
-#       '--time-zone', 'UTC',
-#       '--location', 'europe-west3',
-#       '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
-#     ]
+  # Create Cloud Scheduler job for 'rebalance_hfea' function
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: [
+      'scheduler', 'jobs', 'update', 'http', 'rebalance_hfea',
+      '--schedule', '0 19 3 1,4,7,10 *',  
+      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/rebalance_hfea',
+      '--http-method', 'POST',
+      '--time-zone', 'UTC',
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
+    ]
 
-#   # Create Cloud Scheduler job for 'monthly_buy_spxl' function
-#   - name: 'gcr.io/cloud-builders/gcloud'
-#     args: [
-#       'scheduler', 'jobs', 'update', 'http', 'monthly_buy_spxl',
-#       '--schedule', '0 19 3 * *',  
-#       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/monthly_buy_spxl',
-#       '--http-method', 'POST',
-#       '--time-zone', 'UTC',
-#       '--location', 'europe-west3',
-#       '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
-#     ]
+  # Create Cloud Scheduler job for 'monthly_buy_spxl' function
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: [
+      'scheduler', 'jobs', 'update', 'http', 'monthly_buy_spxl',
+      '--schedule', '0 19 3 * *',  
+      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/monthly_buy_spxl',
+      '--http-method', 'POST',
+      '--time-zone', 'UTC',
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
+    ]
 
-  # # Create Cloud Scheduler job for 'buy_spxl_above_200sma' function
-  # - name: 'gcr.io/cloud-builders/gcloud'
-  #   args: [
-  #     'scheduler', 'jobs', 'update', 'http', 'buy_spxl_above_200sma',
-  #     '--schedule', '55 15 * * 1-5',  
-  #     '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/buy_spxl_above_200sma',
-  #     '--http-method', 'POST',
-  #     '--time-zone', 'America/New_York',
-  #     '--location', 'europe-west3',
-  #     '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
-  #   ]
+  # Create Cloud Scheduler job for 'buy_spxl_above_200sma' function
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: [
+      'scheduler', 'jobs', 'update', 'http', 'buy_spxl_above_200sma',
+      '--schedule', '55 15 * * 1-5',  
+      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/buy_spxl_above_200sma',
+      '--http-method', 'POST',
+      '--time-zone', 'America/New_York',
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
+    ]
 
-#   # Create Cloud Scheduler job for 'sell_spxl_below_200sma' function
-#   - name: 'gcr.io/cloud-builders/gcloud'
-#     args: [
-#       'scheduler', 'jobs', 'update', 'http', 'sell_spxl_below_200sma', #use 'create' instead of 'update' for the first time
-#       '--schedule', '55 15 * * 1-5',  
-#       '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/sell_spxl_below_200sma',
-#       '--http-method', 'POST',
-#       '--time-zone', 'America/New_York',
-#       '--location', 'europe-west3',
-#       '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
-#     ]
+  # Create Cloud Scheduler job for 'sell_spxl_below_200sma' function
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: [
+      'scheduler', 'jobs', 'update', 'http', 'sell_spxl_below_200sma', #use 'create' instead of 'update' for the first time
+      '--schedule', '55 15 * * 1-5',  
+      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/sell_spxl_below_200sma',
+      '--http-method', 'POST',
+      '--time-zone', 'America/New_York',
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com'
+    ]
 
-  # # Cloud Scheduler Job for S&P 500 Index (POST method with request body)
-  # - name: 'gcr.io/cloud-builders/gcloud'
-  #   args: [
-  #     'scheduler', 'jobs', 'update', 'http', 'sp500_drop_alert',
-  #     '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
-  #     '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
-  #     '--http-method', 'POST',
-  #     '--time-zone', 'America/New_York',
-  #     '--location', 'europe-west3',
-  #     '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
-  #     '--message-body', '{"index_symbol": "^SPX", "index_name": "S&P 500"}'
-  #   ]
+  # Cloud Scheduler Job for S&P 500 Index (POST method with request body)
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: [
+      'scheduler', 'jobs', 'update', 'http', 'sp500_drop_alert',
+      '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
+      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
+      '--http-method', 'POST',
+      '--time-zone', 'America/New_York',
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
+      '--message-body', '{"index_symbol": "^SPX", "index_name": "S&P 500"}'
+    ]
 
-  # # Cloud Scheduler Job for MSCI World Index (POST method with request body)
-  # - name: 'gcr.io/cloud-builders/gcloud'
-  #   args: [
-  #     'scheduler', 'jobs', 'update', 'http', 'msci_drop_alert',
-  #     '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
-  #     '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
-  #     '--http-method', 'POST',
-  #     '--time-zone', 'America/New_York',
-  #     '--location', 'europe-west3',
-  #     '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
-  #     '--message-body', '{"index_symbol": "URTH", "index_name": "MSCI World"}'
-  #   ]
+  # Cloud Scheduler Job for MSCI World Index (POST method with request body)
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: [
+      'scheduler', 'jobs', 'update', 'http', 'msci_drop_alert',
+      '--schedule', '30 9-15 * * 1-5',  # Runs at the 30th minute of every hour from 9 AM to 3 PM (inclusive)
+      '--uri', 'https://europe-west3-trading-436516.cloudfunctions.net/index_alert',
+      '--http-method', 'POST',
+      '--time-zone', 'America/New_York',
+      '--location', 'europe-west3',
+      '--oidc-service-account-email', '1098661711782-compute@developer.gserviceaccount.com',
+      '--message-body', '{"index_symbol": "URTH", "index_name": "MSCI World"}'
+    ]
 
 options:
   logging: CLOUD_LOGGING_ONLY  # Send logs to Cloud Logging only
