--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ node_modules/
 upro_simulation_comparison.csv
 backtest200sma.ipynb
 tradingbot/
+main-project-419210-21fa3c721003.json
+alpaca_statement.ipynb
