removed monthly tqqq buy

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -92,20 +92,20 @@ steps:
     - --memory=256MB
     - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
-  # Step 7: Deploy the make_monthly_buy_tqqq
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-    - functions
-    - deploy
-    - make_monthly_buy_tqqq  # The name of the Cloud Function for make_monthly_buy_tqqq
-    - --source=.
-    - --trigger-http
-    - --region=europe-west3
-    - --runtime=python310
-    - --timeout=540s
-    - --entry-point=monthly_buy_tqqq  # Entry point function in your Python code
-    - --memory=256MB
-    - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
+  # # Step 7: Deploy the make_monthly_buy_tqqq
+  # - name: 'gcr.io/cloud-builders/gcloud'
+  #   args:
+  #   - functions
+  #   - deploy
+  #   - make_monthly_buy_tqqq  # The name of the Cloud Function for make_monthly_buy_tqqq
+  #   - --source=.
+  #   - --trigger-http
+  #   - --region=europe-west3
+  #   - --runtime=python310
+  #   - --timeout=540s
+  #   - --entry-point=monthly_buy_tqqq  # Entry point function in your Python code
+  #   - --memory=256MB
+  #   - --set-env-vars=GOOGLE_CLOUD_PROJECT=1098661711782
 
   # # Step 4: Deploy the buy_tqqq_if_above_200sma
   # - name: 'gcr.io/cloud-builders/gcloud'
