added basic firestore support

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ upro_simulation_comparison.csv
 backtest200sma.ipynb
 tradingbot/
 main-project-419210-21fa3c721003.json
+trading-436516-c4449aa3edcc.json
 alpaca_statement.ipynb
 realized_gains.csv
 activities.csv
